--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bufferutil": "^4.0.7",
+    "chai": "^4.3.7",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "ipfs-http-client": "^60.0.1",
     "next": "13.4.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "utf-8-validate": "^5.0.10",
+    "web3modal": "^1.9.12",
+    "ws": "^8.13.0"
+  },
+  "devDependencies": {
+    "add": "^2.0.6",
+    "autoprefixer": "^10.4.14",
+    "ethers": "^5.6.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
